# SDL3_POLAR-STAR

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN_DOC.txt  README.md  TODO  builder.zsh  compile_flags.txt  con.txt  game  notes
include/: AnimatedSprite.hpp  ResourceManager.hpp  SDLApplication.hpp  Sprite.hpp  SpriteManagers.hpp  bullets.hpp  gamedefs.hpp
include/Design Patterns/: Flyweight.hpp  InputHandler.cpp
src/: HudManager.cpp  HudManager.hpp  ResourceManager.cpp  Sprite.cpp  Sprite.hpp  bgManager.cpp  bgManager.hpp  gamedefs.hpp  hud.cpp  hudManager.cpp  hudManager.hpp  inputManager.hpp  main.cpp  player.cpp  player.hpp
src/app/: timer.hpp
src/include/: ActorPlayer.h  BackgroundManager.h  Bullet.h  Entity.h  GameDefs.h  HudManager.h  LoopQueues.h  Player.h  Rendersequence.hpp  ResourceManager.h  SDLApplication.h  Sprite.h  Sprite.hpp  SpriteManagers.h  SpriteManagers.hpp  bgManager.hpp  bullet.h  enemy.h  entity.h  gamedefs.hpp  gameloopqueue.h  inputManager.h  player.hpp
src/include/Backgrounds/: Cloud.h  Clouds.h  Moon.h  Star.h  Stars.h
src/include/Design Patterns/: Command.hpp  InputHandler.hpp
src/include/Managers/: BackgroundManager.h  HudManager.h  InputManager.h  QueueManager.h  ResourceManager.h  SDLApplication.h  SpriteManagers.h
src/include/Players/: ActorPlayer.h  Curly.h  King.h  Misery.h  Quote.h
src/include/Weapons/: PolarStar.h  Weapon.h  WeaponDefs.h
src/src/: ActorPlayer.cpp  AnimatedSprite.cpp  BackgroundManager.cpp  Bullet.cpp  Entity.cpp  HudManager.cpp  InputManager.cpp  Player.cpp  ResourceManager.cpp  Sprite.cpp  bullet.cpp  bullets.cpp  enemy.cpp  main.cpp  player.cpp  updatequeue.cpp
src/src/Backgrounds/: Clouds.cpp  Star.cpp
src/src/Managers/: BackgroundManager.cpp  HudManager.cpp  InputManager.cpp  (+2 more)
